--- a/data-engineer.html
+++ b/data-engineer.html
@@ -105,7 +105,7 @@
 <p><span class="badge badge-light">Bethesda, MD</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/tj3jjyqpyactjaprxu9cbyg6gh'>Data Engineer up to $300,000 | CardinalHire</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/cardinalhire/job/tj3jjyqpyactjaprxu9cbyg6gh'>Data Engineer up to $300,000 | CardinalHire</a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -237,7 +237,7 @@ systems,?...</p>
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698466689-data-engineer-with-etl-python-aws-sql'>Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698466689-data-engineer-with-etl-python-aws-sql'>Bey Data Engineer with ETL, Python, AWS, SQL | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -265,7 +265,7 @@ systems,?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/recurly/aea9740e-c288-4e1b-88d6-bd1becdb781e'>Recurly - Senior Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/recurly/aea9740e-c288-4e1b-88d6-bd1becdb781e'>Recurly - Senior Data Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -293,7 +293,7 @@ systems,?...</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/9tdo7ggrr5teama7tid1eqekxw'>Data Engineer | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/9tdo7ggrr5teama7tid1eqekxw'>Data Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">New York, NY  ?  New York</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -324,7 +324,7 @@ analysts et data scientists. Sous la supervision du Head of Data, votre r?le est
 <p>Oct 15, 2019 ... TrueData is a leading mobile data platform that works with app publishers who 
 generate mobile data and the apps, agencies, brands, and ad tech companies?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/10pearls/j/2CD6820499/'>Data Engineer - 10Pearls</a></h5> 
+<h5><a href='https://apply.workable.com/10pearls/j/2CD6820499/'>Data Engineer - 10Pearls</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 18, 2019 ... We are looking for a ?Data Engineer?. Ideal candidate should have a Bachelor's 
 degree in Computer Science with 2 ? 3 years of programming experience on?...</p>
@@ -402,7 +402,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/altisource/jobs/1925338'>Job Application for 1713323 - Big Data Engineer at Altisource</a></h5> 
+<h5><a href='https://boards.greenhouse.io/altisource/jobs/1925338'>Job Application for 1713323 - Big Data Engineer at Altisource</a></h5> 
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
