--- a/data-analyst.html
+++ b/data-analyst.html
@@ -71,15 +71,23 @@
   
 	
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/woodbine/e8133cbf-bf88-4d25-83d8-23a02302c410'>Woodbine - Database Analyst</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/koddi/ae44e4ca-6140-4627-af14-37b666d1024a'>Koddi - Data Analyst Internship</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698668014-sr-analyst-iii-statistical-programming'>Biogen Sr Analyst III, Statistical Programming | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PopHealthCareLLC/743999698666018-data-reporting-analyst-operations'>PopHealthCare, LLC Data Reporting Analyst - Operations | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PopHealthCareLLC/743999698666018-data-reporting-analyst-operations'>PopHealthCare, LLC Data Reporting Analyst - Operations | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Gameloft/743999698653332-analyste-programmeur-de-donnees-data-programmer-analyst'>Gameloft Analyste-programmeur de donn?es - Data Programmer-Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Gameloft/743999698653332-analyste-programmeur-de-donnees-data-programmer-analyst'>Gameloft Analyste-programmeur de donn?es - Data Programmer-Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Montreal, QCCanada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -91,11 +99,11 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/affirm/1779d148-8516-4848-a756-47d58cd986e3'>Affirm - Data Analyst - Merchant Risk</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/affirm/1779d148-8516-4848-a756-47d58cd986e3'>Affirm - Data Analyst - Merchant Risk</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/workmarket/jobs/1925798?gh_jid=1925798&gh_src=ac0da28a1'>Job Application for Senior Data Analyst at WorkMarket</a></h5> 
+<h5><a href='https://boards.greenhouse.io/workmarket/jobs/1925798?gh_jid=1925798&gh_src=ac0da28a1'>Job Application for Senior Data Analyst at WorkMarket</a></h5> 
 <p><span class="badge badge-light">Toronto, ON  Toronto, ON</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -124,7 +132,7 @@
 <p><span class="badge badge-light">London London  London</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://www.sigmarrecruitment.com/job/data-management-senior-analyst-1/'>Data Management Senior Analyst | Ref  RTDMSA1 - Sigmar</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.sigmarrecruitment.com/job/data-management-senior-analyst-1/'>Data Management Senior Analyst | Ref  RTDMSA1 - Sigmar</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
@@ -138,7 +146,7 @@
 <p><span class="badge badge-light">Scottsdale, Arizona</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/manifestsolutions/job/pg5fcyjw9xtwomprg4pcypioiy'>Data Analyst | Manifest Solutions</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/manifestsolutions/job/pg5fcyjw9xtwomprg4pcypioiy'>Data Analyst | Manifest Solutions</a></h5> 
 <p><span class="badge badge-light">Columbus, OH  Columbus</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -162,7 +170,7 @@
 <p><span class="badge badge-light">Oxford</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/yelp/2ee6b838-409e-4db8-a6ee-df72f2984e68'>Yelp - Data Science Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/yelp/2ee6b838-409e-4db8-a6ee-df72f2984e68'>Yelp - Data Science Analyst</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -230,7 +238,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Vision7International/743999698578227-data-analyst-analytics-insights-'>Vision7 International Data Analyst (Analytics & Insights) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Vision7International/743999698578227-data-analyst-analytics-insights-'>Vision7 International Data Analyst (Analytics & Insights) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Toronto, ON, Canada</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -242,7 +250,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-26873'>Data Analyst - RELX Careers</a></h5> 
+<h5><a href='https://4re.referrals.selectminds.com/jobs/data-analyst-26873'>Data Analyst - RELX Careers</a></h5> 
 <p><span class="badge badge-light">Sydney Australia</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -286,7 +294,7 @@
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698542908-data-analyst'>Publicis Groupe Data Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PublicisGroupe/743999698542908-data-analyst'>Publicis Groupe Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Australia  Paris</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -302,7 +310,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bowmo/a412380a-c3d8-4cfd-be8b-6a9f33c6da48'>bowmo - Data Analyst (CRM)</a></h5> 
+<h5><a href='https://jobs.lever.co/bowmo/a412380a-c3d8-4cfd-be8b-6a9f33c6da48'>bowmo - Data Analyst (CRM)</a></h5> 
 <p><span class="badge badge-light">Brooklyn, NY</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -366,7 +374,7 @@
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/falcon/2ddbd3f3-4d89-45cd-b158-1344f73fbe6f'>Falcon.io - R&D Data Analyst</a></h5> 
+<h5><a href='https://jobs.lever.co/falcon/2ddbd3f3-4d89-45cd-b158-1344f73fbe6f'>Falcon.io - R&D Data Analyst</a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -450,7 +458,7 @@
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698423237-senior-data-analyst-research'>PayScale Senior Data Analyst, Research | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PayScale/743999698423237-senior-data-analyst-research'>PayScale Senior Data Analyst, Research | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -462,7 +470,7 @@
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LuminousTechnologyGroup/743999698393161-data-analyst'>Luminous Technology Group Data Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LuminousTechnologyGroup/743999698393161-data-analyst'>Luminous Technology Group Data Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -479,14 +487,6 @@
 <h5><a href='https://columbususa.zohorecruit.com/recruit/ViewJob.na?digest=lK1VdUafFt6UWhqebSEml7kugwsq8k@HC0QJ2KVT3Vk-&embedsource=Twitter'>Business Data Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://idalab.softgarden.io/job/5122592/Data-and-Strategy-Analyst-at-HotSpot-Therapeutics-m-f-d-?jobDbPVId=14375302&amp;l=en'>Data and Strategy Analyst at HotSpot Therapeutics (m/f/d) at idalab GmbH | softgarden</a></h5> 
-<p><span class="badge badge-light">Berlin, Deutschland</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/dv01/jobs/4498658002'>Job Application for Data Analyst, Capital Markets  at dv01</a></h5> 
-<p><span class="badge badge-light">New York, New York</span></p>
-<p>Posted on: 2019-10-29</p>
 <hr/>
 
 
