--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -73,7 +73,17 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://interim-group.join.com/jobs/444191-business-intelligence-berater-w-m-d-bei-outcome'>Job @ interim Group (Cologne): Business Intelligen... | JOIN</a></h5> 
+<h5><a href='https://boards.greenhouse.io/takealotcom/jobs/1934982'>Job Application for Superbalist - Business Intelligence Engineer  at takealot.com</a></h5> 
+<p><span class="badge badge-light">Cape Town  South Africa</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://gambling.recruitee.com/l/pl/o/business-intelligence-analyst'>
+      Business Intelligence Analyst - Gambling.com Group
+    </a></h5> 
+<p><span class="badge badge-light">Dublin</span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://interim-group.join.com/jobs/444191-business-intelligence-berater-w-m-d-bei-outcome'>Job @ interim Group (Cologne): Business Intelligen... | JOIN</a></h5> 
 <p><span class="badge badge-light">Cologne Cologne</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -109,7 +119,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=ql99Vfwi&k=Job&j=oszlbfwh&__jvst=Employee+Referral&__jvsd=s9NV5iwJ&__jvsc=Twitter&bid=nT67pMwM'>Bodybuilding.com Careers - Senior Business Intelligence Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=ql99Vfwi&k=Job&j=oszlbfwh&__jvst=Employee+Referral&__jvsd=s9NV5iwJ&__jvsc=Twitter&bid=nT67pMwM'>Bodybuilding.com Careers - Senior Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light">Boise, Idaho</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -133,7 +143,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698452272-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698452272-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -237,7 +247,7 @@
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/capgemini-japan/job/ofVrbfww'>Capgemini Japan Careers - Business Intelligence Infra Developer/ Architect</a></h5> 
+<h5><a href='https://jobs.jobvite.com/capgemini-japan/job/ofVrbfww'>Capgemini Japan Careers - Business Intelligence Infra Developer/ Architect</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -265,7 +275,7 @@
 <p><span class="badge badge-light">Raleigh, North Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698263859-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698263859-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -396,7 +406,7 @@ using?...</p>
 <p><span class="badge badge-light">London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/teamreddog/job/iqj887pxqwrzbs9gw4ygrhy1br'>Business Intelligence Analyst 3  | Current Opportunities</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/teamreddog/job/iqj887pxqwrzbs9gw4ygrhy1br'>Business Intelligence Analyst 3  | Current Opportunities</a></h5> 
 <p><span class="badge badge-light">Bellevue, WA  Bellevue, WA</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -446,7 +456,7 @@ using?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://paltron1.join.com/jobs/454913-business-intelligence-specialist-m-w-d'>Job @ PALTRON (Lingen): Business Intelligence Spec... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://paltron1.join.com/jobs/454913-business-intelligence-specialist-m-w-d'>Job @ PALTRON (Lingen): Business Intelligence Spec... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -474,14 +484,6 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <h5><a href='https://genesys.referrals.selectminds.com/jobs/business-systems-analyst-business-intelligence-3985'>Business Analyst, Business Intelligence - Genesys Careers</a></h5> 
 <p><span class="badge badge-light">United States California</span></p>
 <p>Posted on:: 2019-10-22</p>
-<hr/>
-<h5><a href='https://thurrock.referrals.selectminds.com/jobs/strategic-lead-business-intelligence-290'>Strategic Lead - Business Intelligence - Thurrock Council Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-22</p>
-<hr/>
-<h5><a href='https://theice.referrals.selectminds.com/jobs/fixed-income-business-intelligence-data-analyst-1075'>Fixed Income Business Intelligence/Data Analyst - Intercontinental Exchange Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-22</p>
 <hr/>
 
 
